style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
}

.header {
    display: flex;
    justify-content: space-between;
    padding: 0px 160px;
    background-color: #1f2937;
}

.header img {
    height: 100px;
    width: 100px;
}
.header a {
    font-size: 18px;
    color: #e5e7ebaf;
    text-decoration: none;
    padding-left: 18px;
}
.content {
    margin: 0;
}

.section1 {
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: content-box;
    padding: 100px 160px 120px;
    background-color: #1f2937;
}

.s1-container {
    width: 440px;
}

.s1-container h1 {
    font-size: 48px;
    font-weight: bolder;
    color: #f9faf8;
}
.s1-container p {
    font-size: 18px;
    color: #e5e7eb;
}

.section1 img {
    height: 240px;
    width: 500px;
}

.section2 {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 60px 300px 100px;
    gap: 28px;
}

.card-section {
    display: flex;
    justify-content: space-evenly;
}

.card {
    color: #1f2937c0;
}

.card img {
    width: 150px;
    height: 160px;
    border: 4px solid #3882f6;
    border-radius: 25px;
    margin-bottom: 18px;
    box-shadow: 15px 15px 30px #bebebe,
             -15px -15px 30px #ffffff;
}

.card:hover {
    margin-top: -10px;
}

.section3 {
    display: flex;
    box-sizing: content-box;
    padding: 100px 300px;
    background-color: #e5e7eb;
}

blockquote {
    color: #1f2937ba;
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
}
cite {
    display: flex;
    justify-content: right;
    padding-right: 24px;
    font-size: 22px;
    font-weight: bold;
    font-style: normal;
    color: #1f2937ec;
}

.section4 {
    padding: 100px 240px;
}

.s4-container {
    display: flex;
    justify-content: space-between;
    background-color: #3882f6;
    padding: 50px 80px;
    border-radius: 10px;
}

.s4-container h3, button{
    color: white;
}

.s4-container p {
    color: #e5e7ebaf;
}

button {
    font-size: 16px;
    font-weight: bold;
    background-color: #3882f6;
    padding: 8px 30px;
    border-radius: 8px;
    border-style: solid;
    border-color: #3882f6;
}

.s4-container button {
    border-color: #f9faf8;
}

